--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,12 @@
-colorama==0.4.6
-pytest==8.4.1
-SQLAlchemy[mypy]==2.0.43
 alembic==1.16.4
+autoflake==2.4.0
+black==25.1.0
+colorama==0.4.6
+isort==6.0.1
 mypy==1.17.1
 psycopg2-binary==2.9.10
+pydantic==2.11.7
+pytest==8.4.1
 python-dotenv==1.1.1
+SQLAlchemy[mypy]==2.0.43
+types-colorama==0.4.15.20250801
