partial progress on indexing, might change directions

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,5 +6,8 @@ profile = "black"
 line_length = 100
 
 [tool.mypy]
-exclude = "alembic/versions/.*"
+exclude = [
+    "alembic/versions/*",
+    "test_files/*"
+]
 plugins = ["sqlalchemy.ext.mypy.plugin"]
