--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,5 @@
+exclude: '(^|.*/)test_files/.*'
+
 repos:
   - repo: https://github.com/PyCQA/autoflake
     rev: v2.3.1
@@ -12,7 +14,7 @@ repos:
         types: [python]
 
   - repo: https://github.com/pycqa/isort
-    rev: 5.13.2
+    rev: 6.0.1
     hooks:
       - id: isort
         name: isort (black profile)
@@ -22,7 +24,7 @@ repos:
         types: [python]
 
   - repo: https://github.com/psf/black
-    rev: 24.8.0
+    rev: 25.1.0
     hooks:
       - id: black
         name: black (project config)
