feat: initial work on vector indexing

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,13 +3,19 @@ autoflake==2.3.1
 black==25.1.0
 celery==5.5.3
 celery-types==0.23.0
+chonkie[code]==1.2.1
+chromadb==1.0.20
 colorama==0.4.6
 isort==6.0.1
 mypy==1.17.1
+optimum==1.27.0
 psycopg2-binary==2.9.10
 pydantic==2.11.7
 pytest==8.4.1
 python-dotenv==1.1.1
 redis==6.4.0
+sentence-transformers==5.1.0
 SQLAlchemy[mypy]==2.0.43
+torch==2.8.0
+transformers==4.55.4
 types-colorama==0.4.15.20250801
