--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,6 +39,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r backend/requirements.txt
 
+      - name: Start Model Server
+        working-directory: backend
+        run: |
+          python scripts/run_model_server.py &
+          echo $! > model_server.pid
+
       - name: Run tests
         working-directory: backend
         run: |
@@ -49,6 +55,11 @@ jobs:
         run: |
           docker compose -f deployment/docker/docker-compose-dev.yml ps
           docker compose -f deployment/docker/docker-compose-dev.yml logs --no-color | tail -n 500
+
+      - name: Teardown Model Server
+        if: always()
+        run: |
+          kill $(cat backend/model_server.pid)
 
       - name: Teardown Docker services
         if: always()
