--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ celery-types==0.23.0
 chonkie[code]==1.2.1
 chromadb==1.0.20
 colorama==0.4.6
+fastapi==0.116.1
 isort==6.0.1
 litellm==1.76.2
 mypy==1.17.1
@@ -21,3 +22,4 @@ SQLAlchemy[mypy]==2.0.43
 torch==2.8.0
 transformers==4.55.4
 types-colorama==0.4.15.20250801
+types-requests==2.32.4.20250809
